--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/reside-eng/take-home-assignment-nodejs-simplyrets#readme",
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "express": "4.18.2",
     "http-errors": "^2.0.0",
     "joi": "^17.9.1",
@@ -33,6 +34,7 @@
     "@types/supertest": "2.0.12",
     "jest": "29.5.0",
     "prettier": "2.8.4",
+    "prisma": "^4.12.0",
     "supertest": "6.3.3",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
